--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>gigs&derric</title>
 </head>
 <body>
-    <center><h1>Hello World.</h1></center>
+    <center><h1>Hello World, we are software developers</h1></center>
 </body>
 </html>
